[package]
name = "learn-bnf"
version = "0.1.0"
authors = ["alienzj <alienchuj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bnf = "0.3.0"

[[bin]]
name = "dna"
path = "src/dna.rs"

[[bin]]
name = "postal_address"
path = "src/postal_address.rs"

[[bin]]
name = "fastq"
path = "src/fastq.rs"

[[bin]]
name = "fasta"
path = "src/fasta.rs"
